# Numerology

./: .gitignore  AndroidMainWindow.cpp  AndroidMainWindow.h  AndroidMainWindow.ui  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  main.qml
Numerology/: BackendFunctions.cpp  BackendFunctions.h  CulminationModel.cpp  CulminationModel.h  DayNumberModel.cpp  DayNumberModel.h  Numerology.cpp  Numerology.h  NumerologyDayNumber.cpp  NumerologyDayNumber.h
resources/: descriptions.json
